--- a/index.html
+++ b/index.html
@@ -1131,18 +1131,33 @@ setTimeout(() => {
   function switchLanguage(lang) {
     document.documentElement.lang = lang;
     document.getElementById("langCurrent").textContent = lang.toUpperCase();
+    let invitedTitleUpdated = false; // Flag to track if the 'invited' title has been updated
+  
     document.querySelectorAll("[data-i18n]").forEach(el => {
       el.classList.remove("show");
       const key = el.getAttribute("data-i18n");
       setTimeout(() => {
         el.textContent = translations[lang][key] || el.textContent;
         el.classList.add("show");
+  
+        // Check if this is the 'invited' title and it has been updated
+        if (key === "invited" && el.textContent === translations[lang].invited) {
+          invitedTitleUpdated = true;
+        }
+  
+        // If all elements are updated (or specifically the 'invited' title)
+        // This is a simple approach; for more complex scenarios, you might need a counter
+        // For now, let's just make sure it's called after the 'invited' title is set.
+        // A more robust solution might be to call insertGuestName() AFTER the entire forEach loop
+        // or after a small delay to ensure all updates have settled.
+        // For simplicity, let's move insertGuestName() to run after all transitions.
       }, 200);
     });
-    // Re-insert guest name after language change
-    insertGuestName();
+  
+    // Schedule insertGuestName to run after all the translation updates are likely complete
+    // A slightly longer delay might be safer, or call it directly after the loop.
+    setTimeout(insertGuestName, 250); // Give enough time for all translations to apply
   }
-
   // Insert guest name under the invitation heading in both languages
   function insertGuestName() {
     const guestName = getUrlParameter('name');
