--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@ window.addEventListener("load", () => {
       <div class="rsvp-title" style="font-size: 2.5em; line-height: 1.1; text-align: center" data-i18n="rsvp">Potvrdite svoj dolazak</div>
       <div class="divider"></div>
       <div class="rsvp-phones">
-        <p data-i18n="confirmBy"> Molimo vas da potvrdite svoj dolazak do 1. avgusta.</p>
+        <p data-i18n="confirmBy"> Molimo vas da potvrdite svoj dolazak do 15. avgusta.</p>
        <br />
         <br />
         <i class="fa-solid fa-phone"></i> Milan:
@@ -1089,7 +1089,7 @@ setTimeout(() => {
       exact_location: "Banja Luka, Bosnia and Herzegovina",
       parking: "Free parking available",
       rsvp: "Confirm your attendance",
-      confirmBy: "Please confirm your attendance by August 1st.",
+      confirmBy: "Please confirm your attendance by August 15th.",
       saveToCalendar: "Save to calendar",
       date: "September 13th, 2025"
     },
@@ -1105,7 +1105,7 @@ setTimeout(() => {
       church_location: "15:00 Crkva Sv. Trojice",
       schedule: "Raspored",
       ceremony: "Crkveno Vjenčanje",
-      drinks: "Skup svatova & vaše prvo piće",
+      drinks: "16:00 Skup svatova & vaše prvo piće",
       dinner: "Večera",
       hungry: "Obavezno dođite gladni.",
       dancing: "Zamjerimo ljudima koji sjede!",
@@ -1113,7 +1113,7 @@ setTimeout(() => {
       exact_location: "Banja Luka, Bosnia i Hercegovina",
       parking: "Slobodan parking je dostupan",
       rsvp: "Potvrdite svoj dolazak",
-      confirmBy: "Molimo vas da potvrdite svoj dolazak do 1. avgusta.",
+      confirmBy: "Molimo vas da potvrdite svoj dolazak do 15. avgusta.",
       saveToCalendar: "Sačuvaj u kalendar",
       date: "13. Septembar 2025"
     }
