--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@ window.addEventListener("load", () => {
       <div class="rsvp-title" style="font-size: 2.5em; line-height: 1.1; text-align: center" data-i18n="rsvp">Potvrdite svoj dolazak</div>
       <div class="divider"></div>
       <div class="rsvp-phones">
-        <p data-i18n="confirmBy"> Molimo vas da potvrdite svoj dolazak do 15. avgusta.</p>
+        <p data-i18n="confirmBy"> Molimo vas da potvrdite svoj dolazak do 1. septembra.</p>
        <br />
         <br />
         <i class="fa-solid fa-phone"></i> Milan:
@@ -1089,7 +1089,7 @@ setTimeout(() => {
       exact_location: "Banja Luka, Bosnia and Herzegovina",
       parking: "Free parking available",
       rsvp: "Confirm your attendance",
-      confirmBy: "Please confirm your attendance by August 15th.",
+      confirmBy: "Please confirm your attendance by September 1st.",
       saveToCalendar: "Save to calendar",
       date: "September 13th, 2025"
     },
@@ -1113,7 +1113,7 @@ setTimeout(() => {
       exact_location: "Banja Luka, Bosnia i Hercegovina",
       parking: "Slobodan parking je dostupan",
       rsvp: "Potvrdite svoj dolazak",
-      confirmBy: "Molimo vas da potvrdite svoj dolazak do 15. avgusta.",
+      confirmBy: "Molimo vas da potvrdite svoj dolazak do 1. septembra.",
       saveToCalendar: "Sačuvaj u kalendar",
       date: "13. Septembar 2025"
     }
